--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,19 @@
 }
 
 .sect1 {
-    border: 4px solid green;
-    max-width: 1440px;
-    max-height: 742px;
+    width: 1340px;
     margin-bottom: 170px;
 }
 
 .nav {
     display: flex;
-    border: 3px solid blue;
     justify-content: space-around;
+}
+
+.mu{
+    width: 260px;
+    position: relative;
+    right: 34px;
 }
 
 ul {
@@ -23,15 +26,25 @@ ul {
 
 .navbar {
     display: inline;
-    left: 165;
     color: #505F98;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.cut {
+    position: relative;
+    left: 25px;
+}
+
+.put {
+    position: relative;
+    left: 60px;
+}
+    
+
 .navbar a {
-    border: 3px solid pink;
-    width: 100px;
-    height: 25px;
+    font-weight: 400;
+    width: 63px;
+    height: 24px;
     size: 14px;
     line-height: 24px;
     text-decoration: none;
@@ -40,28 +53,27 @@ ul {
 }
 
 .page-title {
-    width: 79px;
     height: 38px;
 }
 
 .land {
-    border: 1px solid rgb(155, 250, 3);
-    list-style-type: none;
-    text-decoration: none;
+    position: relative;
+    bottom: 15px;
+    font-size: 26px;
+    left: -40px;
+    height: 38px;
+    width: 95px;
     margin-left: -70px;
     color: #37447E;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 900;
     line-height: 38px;
-    position: absolute;
-    top: 5px;
 }
 
 
 .buy {
     text-align: center;
-    border: 1px solid blue;
-    width: 143px;
+    width: 160px;
     height: 26px;
     margin-top: 18px;
     margin-right: 19px;
@@ -79,13 +91,14 @@ button {
 }
 
 .sect2 {
+    width: 1340px;
+    /*height: 742px;*/
     display: flex;
     justify-content: space-between;
 }
 
 .duce {
-    border: 2px solid grey;
-    margin-left: 140px;
+    margin-left: 110px;
     margin-right: 20px;
 }
 
@@ -117,8 +130,6 @@ button {
 
 .kit {
     text-align: center;
-    border: 1px solid blue;
-
 }
 
 .pur {
@@ -152,19 +163,22 @@ button {
 }
 
 .sect2 {
+    width: 1340px;
+    /*height: 742px;*/
     display: flex;
     justify-content: space-between;
     margin-bottom: 150px;
 }
 
 .sect3 {
+    width: 1340px;
+    /*height: 742px;*/
     display: flex;
     margin-bottom: 200px;
 }
 
 .ful {
-    border: 2px solid grey;
-    margin-left: 140px;
+    margin-left: 110px;
     margin-right: 35px;
 }
 
@@ -203,7 +217,6 @@ button {
 }
 
 .un {
-    border: 3px solid red;
     display: inline-flex;
 }
 
@@ -416,7 +429,85 @@ button {
 }
 
 .sect4 {
+    position: relative;
+    top: 212px;
+    height: 250px;
+    width: 1340px;
+    background-color: #E7ECFF;
+}
+
+.oops {
     display: flex;
     justify-content: space-around;
-    background-color: #E7ECFF;
+}
+
+.copy {
+    position: relative;
+    top: 60px;
+    right: 50px;
+    font-size: 14px;
+    height: 24px;
+    width: 134px;
+    color: #939EA4;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    line-height: 24px;
+}
+
+.and{
+    position: relative;
+    top: 40px;
+    font-size: 26px;
+    left: -35px;
+    height: 38px;
+    width: 95px;
+    color: #37447E;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 900;
+    line-height: 38px;
+}
+
+.pon {
+    width: 109px;
+    height: 26px;
+    position: relative;
+    top: 66px;
+    left: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-radius: 4px;
+    background: #111B47;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+.line {
+    width: 1086px;
+    height: 1px;
+    position: relative;
+    top: 78px;
+    left: 117px;
+    border: 1px solid #CDD1D4;
+}
+
+.muss{
+    position: relative;
+    width: 260px;
+    left: 117px;
+    top: 86px;
+    bottom: 75px;
+    height: 36px;
+}
+
+.last {
+    position: relative;
+    top: 40px;
+    left: 1011px;
+}
+
+.rop {
+    position: relative;
+    right: 40px;
 }
