--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,29 @@
 * {
-    margin: revert;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.sect1 {
-    width: 1340px;
+html {
+    overflow-x: hidden;
+}
+
+body {
+    overflow: hidden;
+    height: 100%;
+    position: relative;
+}
+
+header {
+    position: relative;
+    z-index: 400;
     margin-bottom: 170px;
+}
+
+.container {
+    width: 100%;
+    max-width: 1110px;
+    margin: 0 auto;
 }
 
 .nav {
@@ -15,12 +32,14 @@
 }
 
 .mu{
-    width: 260px;
-    position: relative;
-    right: 34px;
+    width: 245px;
+    margin-top: 8px;
+    margin-left: -137px;
 }
 
 ul {
+    display: flex;
+    justify-content: space-between;
     list-style-type: none;
 }
 
@@ -29,18 +48,7 @@ ul {
     color: #505F98;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-.cut {
-    position: relative;
-    left: 25px;
-}
-
-.put {
-    position: relative;
-    left: 60px;
-}
     
-
 .navbar a {
     font-weight: 400;
     width: 63px;
@@ -57,13 +65,12 @@ ul {
 }
 
 .land {
-    position: relative;
-    bottom: 15px;
+    margin-top: -2px;
     font-size: 26px;
-    left: -40px;
+    left: -20px;
     height: 38px;
     width: 95px;
-    margin-left: -70px;
+    margin-left: -45px;
     color: #37447E;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 900;
@@ -75,8 +82,8 @@ ul {
     text-align: center;
     width: 160px;
     height: 26px;
-    margin-top: 18px;
-    margin-right: 19px;
+    margin-top: 5px;
+    margin-right: -45px;
 }
 
 button {
@@ -91,18 +98,14 @@ button {
 }
 
 .sect2 {
-    width: 1340px;
-    /*height: 742px;*/
+    position: relative;
+    height: 960px;
     display: flex;
     justify-content: space-between;
 }
 
-.duce {
-    margin-left: 110px;
-    margin-right: 20px;
-}
-
 .intro {
+    margin-top: 70px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     font-size: 50px;
@@ -112,6 +115,8 @@ button {
 }
 
 .lorem {
+    margin-top: -10px;
+    margin-bottom: 10px;
     font-weight: 400;
     font-size: 18px;
     font-family: regular 18 system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -125,7 +130,7 @@ button {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #505F98;
     line-height: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
 }
 
 .kit {
@@ -154,7 +159,7 @@ button {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 4px;
     border: 2px solid #091133;
-    background: #FFFFFF;
+    background: transparent;
     color: #111B47;
     cursor: pointer;
     font-weight: 500;
@@ -162,28 +167,23 @@ button {
     line-height: 26px;
 }
 
-.sect2 {
-    width: 1340px;
-    /*height: 742px;*/
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 150px;
+
+.group {
+    width: 1439px;
+    position: absolute;
+    right: -464px;
+    top: -54px;
+    z-index: 0;
 }
 
 .sect3 {
-    width: 1340px;
-    /*height: 742px;*/
+    align-items: center;
     display: flex;
+    justify-content: space-between;
     margin-bottom: 200px;
 }
 
-.ful {
-    margin-left: 110px;
-    margin-right: 35px;
-}
-
 .light {
-    width: 540px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     font-size: 36px;
@@ -193,9 +193,8 @@ button {
 
 .que {
     position: relative;
-    top: -14px;
-    left: 2px;
-    width: 540px;
+    margin-top: -10px;
+    margin-bottom: 10px;
     font-weight: 400;
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -205,9 +204,6 @@ button {
 
 .quam {
     position: relative;
-    top: -25px;
-    left: 2px;
-    width: 540px;
     margin-bottom: 57px;
     font-weight: 400;
     font-size: 16px;
@@ -242,22 +238,13 @@ button {
     line-height: 18px;
 }
 
-.un2 {
-    margin-left: 140px;
-    width: 485px;
-}
-
 .un3 {
     Width: 440px;
-    position: relative;
-    Top: 15px;
-    Left: 186px;
+    display: flex;
+    flex-direction: column;
 }
 
 .fast {
-    position: relative;
-    top: 20px;
-    width: 540px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     font-size: 36px;
@@ -266,10 +253,8 @@ button {
 }
 
 .amet {
-    position: relative;
-    top: 13px;
-    right: 1px;
-    width: 540px;
+    margin-top: -10px;
+    margin-bottom: 10px;
     font-weight: 400;
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -278,10 +263,6 @@ button {
 }
 
 .felis {
-    position: relative;
-    top: 1px;
-    right: 1px;
-    width: 540px;
     margin-bottom: 57px;
     font-weight: 400;
     font-size: 16px;
@@ -291,9 +272,6 @@ button {
 }
 
 .power {
-    position: relative;
-    bottom: 50px;
-    width: 540px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     font-size: 36px;
@@ -302,10 +280,8 @@ button {
 }
 
 .nato {
-    position: relative;
-    bottom: 66px;
-    right: 1px;
-    width: 540px;
+    margin-top: -10px;
+    margin-bottom: 10px;
     font-weight: 400;
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -315,10 +291,6 @@ button {
 
 .nec {
     position: relative;
-    bottom: 78px;
-    right: 1px;
-    width: 540px;
-    margin-bottom: 57px;
     font-weight: 400;
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -327,10 +299,9 @@ button {
 }
 
 .now {
+    margin-top: 30px;
     width: 150px;
     height: 32px;
-    position: relative;
-    bottom: 96px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 4px;
     background: #111B47;
@@ -343,8 +314,9 @@ button {
 }
 
 .price {
-    position: relative;
-    left: 444px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
     width: 600px;
     font-weight: 500;
     font-size: 36px;
@@ -354,8 +326,6 @@ button {
 }
 
 .soc {
-    position: relative;
-    left: 353px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 600px;
     font-weight: 400;
@@ -365,8 +335,9 @@ button {
 }
 
 .mont {
-    position: relative;
-    left: 196px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 600px;
     font-weight: 400;
@@ -376,9 +347,8 @@ button {
 }
 
 .num {
-    position: relative;
-    left: 589px;
-    bottom: 35px;
+    display: flex;
+    justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 600px;
     font-weight: 500;
@@ -388,9 +358,9 @@ button {
 }
 
 .ui {
-    position: relative;
-    left: 589px;
-    bottom: 95px;
+    margin-bottom: 80px;
+    display: flex;
+    justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 350px;
     font-weight: 400;
@@ -400,9 +370,9 @@ button {
 }
 
 .see {
-    position: relative;
-    left: 565px;
-    bottom: 50px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 350px;
     font-weight: 400;
@@ -412,11 +382,12 @@ button {
 }
 
 .chase {
+    margin-bottom: 150px;
+    display: flex;
+    justify-content: center;
+    padding: 2px;
     width: 189px;
     height: 32px;
-    position: relative;
-    left: 543px;
-    bottom: 60px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 4px;
     background: #111B47;
@@ -430,9 +401,7 @@ button {
 
 .sect4 {
     position: relative;
-    top: 212px;
     height: 250px;
-    width: 1340px;
     background-color: #E7ECFF;
 }
 
