--- a/styles.css
+++ b/styles.css
@@ -411,9 +411,8 @@ button {
 }
 
 .copy {
-    position: relative;
-    top: 60px;
-    right: 50px;
+    margin-top: 77px;
+    margin-left: -45px;
     font-size: 14px;
     height: 24px;
     width: 134px;
@@ -424,10 +423,9 @@ button {
 }
 
 .and{
-    position: relative;
-    top: 40px;
+    margin-top: 62px;
     font-size: 26px;
-    left: -35px;
+    margin-left: -48px;
     height: 38px;
     width: 95px;
     color: #37447E;
@@ -439,9 +437,8 @@ button {
 .pon {
     width: 109px;
     height: 26px;
-    position: relative;
-    top: 66px;
-    left: 30px;
+    margin-top: 66px;
+    margin-right: -33px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 4px;
     background: #111B47;
@@ -453,30 +450,24 @@ button {
 }
 
 .line {
-    width: 1086px;
+    width: 1045px;
     height: 1px;
-    position: relative;
-    top: 78px;
-    left: 117px;
+    margin-top: 45px;
+    margin-left: 147px;
     border: 1px solid #CDD1D4;
 }
 
 .muss{
-    position: relative;
     width: 260px;
-    left: 117px;
-    top: 86px;
-    bottom: 75px;
+    margin-left: 144px;
+    margin-top: 30px;
     height: 36px;
 }
 
 .last {
-    position: relative;
-    top: 40px;
-    left: 1011px;
-}
-
-.rop {
-    position: relative;
-    right: 40px;
+        width: 282px;
+        margin-top: -33px;
+        display: flex;
+        justify-content: space-evenly;
+        margin-left: 945px;
 }
